--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 /PrepaInterfaz/nbproject/private/
 /PrepaInterfaz/build/
+/Proyecto_Lista/nbproject/private/
+/Proyecto_Lista/build/
+/Prepa5_practicaquiz3/nbproject/private/
+/JavaApplication12/nbproject/private/
+/Contador/nbproject/private/
+/Contador/build/
+/Contador/dist/
+/quizPractica/quizPractica/nbproject/private/
+/Listas_arreglos/nbproject/private/
+/Listas_arreglos/build/
+/Manuel Gomez prueba corta 1/build/
+/Manuel Gomez prueba corta 1/dist/
+/Manuel Gomez prueba corta 1/nbproject/private/
+/Test_lista_1/nbproject/private/
+/Test_lista_1/build/
+/ListaSimple/nbproject/private/
