Se agrego el quiz1

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /Test_lista_1/nbproject/private/
 /Test_lista_1/build/
 /ListaSimple/nbproject/private/
+/Antony_Cen_Quiz1/nbproject/private/
+/Antony_Cen_Quiz1/build/
