--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /ListaSimple/nbproject/private/
 /Antony_Cen_Quiz1/nbproject/private/
 /Antony_Cen_Quiz1/build/
+/PraticaParcial1/nbproject/private/
+/PraticaParcial1/build/
+/PraticaParcial1/dist/
