Se agrego el metodo de Invertir una lista

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /PraticaParcial1/nbproject/private/
 /PraticaParcial1/build/
 /PraticaParcial1/dist/
+/Quiz1_Original/Antony_Cen_Quiz1/nbproject/private/
+/Quiz1_Original/Antony_Cen_Quiz1/build/
