Practica Pila y Cola

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /PraticaParcial1/dist/
 /Quiz1_Original/Antony_Cen_Quiz1/nbproject/private/
 /Quiz1_Original/Antony_Cen_Quiz1/build/
+/Quiz1_Original/Pila/nbproject/private/
+/Quiz1_Original/Practica_Cola/nbproject/private/
+/Quiz1_Original/Pila/build/
