--- a/PrepaArbol/nbproject/project.properties
+++ b/PrepaArbol/nbproject/project.properties
@@ -28,15 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PrepaQuiz4.jar
+dist.jar=${dist.dir}/PrepaArbol.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/PrepaQuiz4
+dist.jlink.output=${dist.jlink.dir}/PrepaArbol
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.absolutelayout.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=PrepaQuiz4
-main.class=prepaquiz4.PrepaQuiz4
+jlink.launcher.name=PrepaArbol
+main.class=prepaarbol.PrepaArbol
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
