--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 /Quiz1_Original/Pila/nbproject/private/
 /Quiz1_Original/Practica_Cola/nbproject/private/
 /Quiz1_Original/Pila/build/
+/CargarArchivoTXT/nbproject/private/
+/CargarArchivoTXT/build/
+/ListaEnlazada/nbproject/private/
+/arboles_binarios_1/nbproject/private/
+/arboles_binarios_1/build/
